Updated the markdown to stop the p tag from wrapping the images

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -45,6 +45,11 @@ cite {
   font-size: 0.75rem;
 }
 
+figure {
+  margin: 0;
+  margin-top: 3rem;
+}
+
 code,
 pre {
   padding: 3px 5px;
