--- a/_sass/components/c-post.scss
+++ b/_sass/components/c-post.scss
@@ -27,17 +27,8 @@
     }
 
     img {
-      position: relative;
-      box-shadow: 0 3px 9px 0 rgba(5,34,95,0.18),
-                  0 7px 21px 0 rgba(5,25,59,0.06);
-
-      transition: all .3s;
-
-      @include media-query {
-        &:hover {
-          transform: translateY(-5px) scale(1.1);
-        }
-      }
+      box-shadow: 0 3px 9px -5px rgba(5, 34, 95, 0.18),
+                  0 7px 21px 5px rgba(5, 25, 59, 0.06);
     }
 
     @extend %wrapper;
